Fix more review comments